Corrected empty-cell cases.

--- a/overcomplicated-tictactoe/src/main/resources/templates/game.html
+++ b/overcomplicated-tictactoe/src/main/resources/templates/game.html
@@ -52,21 +52,21 @@
                     <div class="row">
                         <div class="col-xs-4">
                             <th:block th:switch="${board.get(0)}">
-                            <a th:case="null" href="/game-move?move=0" class="btn btn-default square">&nbsp;</a>
+                            <a th:case="''" href="/game-move?move=0" class="btn btn-default square">&nbsp;</a>
                             <a th:case="O" href="/game-move?move=0" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                             <a th:case="X" href="/game-move?move=0" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
                             </th:block>
                         </div>
                         <div class="col-xs-4">
                             <th:block th:switch="${board.get(1)}">
-                                <a th:case="null" href="/game-move?move=1" class="btn btn-default square">&nbsp;</a>
+                                <a th:case="''" href="/game-move?move=1" class="btn btn-default square">&nbsp;</a>
                                 <a th:case="O" href="/game-move?move=1" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                                 <a th:case="X" href="/game-move?move=1" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
                             </th:block>
                         </div>
                         <div class="col-xs-4">
                             <th:block th:switch="${board.get(2)}">
-                                <a th:case="null" href="/game-move?move=2" class="btn btn-default square">&nbsp;</a>
+                                <a th:case="''" href="/game-move?move=2" class="btn btn-default square">&nbsp;</a>
                                 <a th:case="O" href="/game-move?move=2" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                                 <a th:case="X" href="/game-move?move=2" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
                             </th:block>
@@ -75,21 +75,21 @@
                     <div class="row">
                         <div class="col-xs-4">
                             <th:block th:switch="${board.get(3)}">
-                                <a th:case="null" href="/game-move?move=3" class="btn btn-default square">&nbsp;</a>
+                                <a th:case="''" href="/game-move?move=3" class="btn btn-default square">&nbsp;</a>
                                 <a th:case="O" href="/game-move?move=3" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                                 <a th:case="X" href="/game-move?move=3" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
                             </th:block>
                         </div>
                         <div class="col-xs-4">
                             <th:block th:switch="${board.get(4)}">
-                                <a th:case="null" href="/game-move?move=4" class="btn btn-default square">&nbsp;</a>
+                                <a th:case="''" href="/game-move?move=4" class="btn btn-default square">&nbsp;</a>
                                 <a th:case="O" href="/game-move?move=4" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                                 <a th:case="X" href="/game-move?move=4" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
                             </th:block>
                         </div>
                         <div class="col-xs-4">
                             <th:block th:switch="${board.get(5)}">
-                                <a th:case="null" href="/game-move?move=5" class="btn btn-default square">&nbsp;</a>
+                                <a th:case="''" href="/game-move?move=5" class="btn btn-default square">&nbsp;</a>
                                 <a th:case="O" href="/game-move?move=5" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                                 <a th:case="X" href="/game-move?move=5" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
                             </th:block>
@@ -98,21 +98,21 @@
                     <div class="row">
                         <div class="col-xs-4">
                             <th:block th:switch="${board.get(6)}">
-                                <a th:case="null" href="/game-move?move=6" class="btn btn-default square">&nbsp;</a>
+                                <a th:case="''" href="/game-move?move=6" class="btn btn-default square">&nbsp;</a>
                                 <a th:case="O" href="/game-move?move=6" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                                 <a th:case="X" href="/game-move?move=6" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
                             </th:block>
                         </div>
                         <div class="col-xs-4">
                             <th:block th:switch="${board.get(7)}">
-                                <a th:case="null" href="/game-move?move=7" class="btn btn-default square">&nbsp;</a>
+                                <a th:case="''" href="/game-move?move=7" class="btn btn-default square">&nbsp;</a>
                                 <a th:case="O" href="/game-move?move=7" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                                 <a th:case="X" href="/game-move?move=7" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
                             </th:block>
                         </div>
                         <div class="col-xs-4">
                             <th:block th:switch="${board.get(8)}">
-                                <a th:case="null" href="/game-move?move=8" class="btn btn-default square">&nbsp;</a>
+                                <a th:case="''" href="/game-move?move=8" class="btn btn-default square">&nbsp;</a>
                                 <a th:case="O" href="/game-move?move=8" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                                 <a th:case="X" href="/game-move?move=8" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
                             </th:block>
