--- a/overcomplicated-tictactoe/src/main/resources/templates/game.html
+++ b/overcomplicated-tictactoe/src/main/resources/templates/game.html
@@ -131,6 +131,27 @@
             </div>
         </div>
     </div>
+
+    <div th:class="${finished}? 'modal show' : (${winner}? 'modal show' : 'modal fade')">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">The game has ended!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p th:text="${finished}? 'It\'s a draw!' : (${winner}? 'The Winner is ' + ${winner} )"></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary"><a href="/game">Start new game.</a></button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"><a href="/">Close</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <div class="container">
             <div class="row">
