Corrected span tags, rewrote action url.

--- a/overcomplicated-tictactoe/src/main/resources/templates/game.html
+++ b/overcomplicated-tictactoe/src/main/resources/templates/game.html
@@ -22,8 +22,8 @@
                 <p>OK, just a bit overcomplicated...</p>
             </div>
             <div class="media-right">
-                <span class="media-heading" th:text="${player.userName}"/>
-                <img class="media-object" th:src="${avatar_uri}" alt="avatar"/>
+                <span class="media-heading" th:text="${player.userName}"></span>
+                <img class="media-object" th:src="${avatar}" alt="avatar">
             </div>
         </header>
 
@@ -34,7 +34,7 @@
                         <h4 class="modal-title">Change your name here:</h4>
                     </div>
                     <div class="modal-body">
-                        <form action="#" th:action="@{/changeplayerusername}" th:object="${player}" method="post">
+                        <form action="#" th:action="@{/change_player_username}" th:object="${player}" method="post">
                             <div class="form-group">
                                 <label for="newname">Your new name:</label>
                                 <input type="text" th:field="*{userName}" id="newname" class="form-control input-sm"/>
