--- a/overcomplicated-tictactoe/src/main/resources/templates/game.html
+++ b/overcomplicated-tictactoe/src/main/resources/templates/game.html
@@ -10,6 +10,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha384-S7YMK1xjUjSpEnF4P8hPUcgjXYLZKK3fQW1j5ObLSl787II9p8RO9XUGehRmKsxd" crossorigin="anonymous"/>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
     <link href="/style.css" rel="stylesheet" />
+    <script type="application/javascript" src="/script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -68,7 +69,8 @@
                     <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#changeNameModal">
                         Change name
                     </button>
-                    <p class="lead funfact" th:utext="${funFact}"></p>
+                    <p class="lead funFact" th:utext="${funFact}"></p>
+                    <button id="funFactButton" type="button" class="btn btn-primary btn-sm">New fun fact</button>
                 </div>
             </div>
         </div>
