--- a/overcomplicated-tictactoe/src/main/resources/static/style.css
+++ b/overcomplicated-tictactoe/src/main/resources/static/style.css
@@ -31,7 +31,7 @@ header .media-object {
     font-size: 3rem;
 }
 
-.funfact {
+.funFact {
     margin-top: 21px;
 }
 
@@ -42,4 +42,8 @@ footer {
 }
 footer img {
     filter: invert(100%) contrast(0.45);
+}
+
+#comic:hover {
+    cursor: pointer;
 }
