--- a/overcomplicated-tictactoe/src/main/resources/templates/game.html
+++ b/overcomplicated-tictactoe/src/main/resources/templates/game.html
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <img th:src="${comic.get('uri')}" th:alt="${comic.get('alt')}" th:title="${comic.get('title')}"/>
+                    <img id="comic" th:src="${comic.get('uri')}" th:alt="${comic.get('alt')}" th:title="${comic.get('title')}"/>
                 </div>
             </div>
         </div>
